# Simple-HTTP-2-Web-Server

./: --http2  .gitignore  CMakeLists.txt  README.md  web.cpp  webserver.cpp
SimpleHTTP2server/: BufferSize.hpp  Connection.cpp  HTTP2Connection.cpp  HTTP2Connection.hpp  HTTP2ConnectionSettings.cpp  HTTP2ConnectionSettings.hpp  HTTP2Frame.cpp  HTTP2Frame.hpp  HTTP2Stream.cpp  HTTP2Stream.hpp  Header.cpp  Header.hpp  HeaderLine.hpp  HeaderParser.cpp  HeaderParser.hpp  Hpack.cpp  Hpack.hpp  HpackStaticTable.cpp  HpackStaticTable.hpp  Huffman.cpp  Huffman.hpp  HuffmanBitString.hpp  HuffmanNode.hpp  ReadFile.cpp  ReadFile.hpp  ServerLib.cpp  ServerLib.hpp  Settings.hpp  WebBinder.cpp  WebBinder.hpp
pythonTester/: get.py
serverTesting/: curl.sh  get.sh
www/: index.html  test.html
